# gatr

./: .gitignore  .itr.db  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  install.ps1  install.sh  justfile  spec.md  uninstall.sh
.github/workflows/: release.yml
skills/gatr/: SKILL.md
src/: adapters.rs  config.rs  main.rs  parser.rs  runner.rs  storage.rs  summary.rs  upgrade.rs  version_shape.rs
tests/: integration.sh
